fix scrollbar being too thickon dm list

--- a/AlanWalkerTheme/scrollbar.css
+++ b/AlanWalkerTheme/scrollbar.css
@@ -2,6 +2,10 @@
   width: 16px;
   height: 16px;
 }
+#app-mount .thin__99f8c::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
 #app-mount .scrollableContainer__74017 > .inner__74017 {
   &::-webkit-scrollbar {
     width: 12px;
@@ -21,9 +25,4 @@
 #app-mount *::-webkit-scrollbar-track {
   border-width: medium;
   border-width: initial;
-}
-#app-mount *::-webkit-scrollbar-thumb,
-#app-mount *::-webkit-scrollbar-track {
-  background-clip: padding-box;
-  border: 4px solid transparent;
 }
